构建成绩展示页面骨架
经过4天的PHP面向百度编程，后台API接口已经OK

--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "pages/index/index",
     "pages/calendar/calendar",
     "pages/score/score",
+    "pages/score/showScore/showScore",
     "pages/tel/departmentTel",
     "pages/tel/tel"
   ],
@@ -31,6 +32,12 @@
         "text": "校历",
         "iconPath": "images/calendar2.png",
         "selectedIconPath": "images/calendar1.png"
+      },
+      {
+        "pagePath": "pages/score/score",
+        "text": "成绩",
+        "iconPath": "images/score.png",
+        "selectedIconPath": "images/score(selected).png"
       },
       {
         "pagePath": "pages/tel/tel",
