--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "pages/calendar/calendar",
     "pages/score/score",
     "pages/score/showScore/showScore",
+    "pages/score/showScore/error",
     "pages/tel/departmentTel",
     "pages/tel/tel"
   ],
