通讯录号码分离为两块
将所有的电话号码分离为部门电话和老师电话两部分。下一步：查看老师电话需要输入自己的学号才能查看。

--- a/app.json
+++ b/app.json
@@ -6,8 +6,9 @@
     "pages/score/score",
     "pages/score/showScore/showScore",
     "pages/score/showScore/error",
-    "pages/tel/departmentTel",
-    "pages/tel/tel"
+    "pages/tel/departmentTel/departmentTel",
+    "pages/tel/tel",
+    "pages/tel/teacherTel/teacherTel"
   ],
   "window": {
     "backgroundTextStyle": "light",
