--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "pages/score/score",
     "pages/score/showScore/showScore",
     "pages/score/showScore/error",
+    "pages/bookSearch/index",
     "pages/tel/departmentTel/departmentTel",
     "pages/tel/tel",
     "pages/tel/teacherTel/teacherTel"
@@ -30,10 +31,10 @@
         "selectedIconPath": "images/class_HL.png"
       },
       {
-        "pagePath": "pages/calendar/calendar",
-        "text": "校历",
-        "iconPath": "images/calendar.png",
-        "selectedIconPath": "images/calendar_HL.png"
+        "pagePath": "pages/bookSearch/index",
+        "text": "图书查询",
+        "iconPath": "images/book.png",
+        "selectedIconPath": "images/book_HL.png"
       },
       {
         "pagePath": "pages/score/score",
