stuInfo page finished
学籍信息页面完成。。现在完成了不少页面了/后端的PHP代码几时写啊？估计会很慢的

--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
     "pages/bookSearch/bookInfo/bookInfo",
     "pages/tel/departmentTel/departmentTel",
     "pages/tel/tel",
+    "pages/stuInfo/stuInfo",
     "pages/tel/teacherTel/teacherTel"
   ],
   "window": {
