睡觉，今晚这样已经不错了。明天继续努力
完成了，登录功能，并会返回学生信息。但是没做数据记录，也没做账号错误验证。明天继续努力。（尴尬，刚才把这段话放到那个仓库里了，这才是正确的应该出现的位置）谁！晚安

--- a/project.config.json
+++ b/project.config.json
@@ -35,8 +35,8 @@
 				{
 					"id": 0,
 					"name": "feature",
-					"pathName": "pages/stuInfo/stuInfo",
-					"query": ""
+					"pathName": "pages/welcome/welcome",
+					"query": "uid=160130123&pwd=19980721"
 				}
 			]
 		}
