--- a/app.json
+++ b/app.json
@@ -13,8 +13,7 @@
     "pages/bookSearch/bookInfo/bookInfo",
     "pages/tel/departmentTel/departmentTel",
     "pages/tel/tel",
-    "pages/stuInfo/stuInfo",
-    "pages/tel/teacherTel/teacherTel"
+    "pages/stuInfo/stuInfo"
   ],
   "window": {
     "backgroundTextStyle": "light",
