book/index页面推荐实例
假装有热门推荐图书页面

--- a/project.config.json
+++ b/project.config.json
@@ -30,15 +30,8 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
-			"list": [
-				{
-					"id": 0,
-					"name": "feature",
-					"pathName": "pages/bookSearch/bookInfo/bookList",
-					"query": ""
-				}
-			]
+			"current": -1,
+			"list": []
 		}
 	}
 }
