热门图书列表这就算是出来了😥
下一步，要超链接啊。点击图书，能出来图书详情

--- a/project.config.json
+++ b/project.config.json
@@ -30,8 +30,14 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "book",
+					"pathName": "pages/bookSearch/index"
+				}
+			]
 		}
 	}
 }
