--- a/project.config.json
+++ b/project.config.json
@@ -30,12 +30,13 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
 					"name": "book",
-					"pathName": "pages/bookSearch/index"
+					"pathName": "pages/bookSearch/index",
+					"query": ""
 				}
 			]
 		}
