--- a/project.config.json
+++ b/project.config.json
@@ -33,9 +33,9 @@
 			"current": -1,
 			"list": [
 				{
-					"id": -1,
+					"id": 0,
 					"name": "book",
-					"pathName": "pages/bookSearch/index",
+					"pathName": "pages/bookSearch/bookInfo/bookList",
 					"query": ""
 				}
 			]
