--- a/project.config.json
+++ b/project.config.json
@@ -35,7 +35,13 @@
 				{
 					"id": 0,
 					"name": "book",
-					"pathName": "pages/bookSearch/bookInfo/bookList",
+					"pathName": "pages/bookSearch/bookInfo/bookInfo",
+					"query": "ISBN=7-5354-2730-8"
+				},
+				{
+					"id": -1,
+					"name": "book",
+					"pathName": "pages/features/features",
 					"query": ""
 				}
 			]
