关键字搜索完成部分,中文乱码待解决

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "pages/calendar/calendar",
     "pages/score/score",
     "pages/score/showScore/showScore",
-    "pages/error/loginerror",
+    "pages/error/notfound",
     "pages/error/queryerror",
     "pages/bookSearch/index",
     "pages/bookSearch/bookInfo/bookInfo",
