--- a/project.config.json
+++ b/project.config.json
@@ -30,13 +30,13 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
 					"name": "book",
-					"pathName": "pages/bookSearch/bookInfo/bookList",
-					"query": "keyword=java"
+					"pathName": "pages/bookSearch/bookInfo/bookDetail",
+					"query": "marc_no=0000475990"
 				}
 			]
 		}
