实现了维持登录态的功能
使用setStoragr实现了维持登录态的功能，以后再也不怕每次重新打开微信后要重新登录了。

--- a/project.config.json
+++ b/project.config.json
@@ -35,8 +35,8 @@
 				{
 					"id": 0,
 					"name": "book",
-					"pathName": "pages/bookSearch/bookInfo/bookDetail",
-					"query": "marc_no=0000475990"
+					"pathName": "pages/error/notfound",
+					"query": ""
 				}
 			]
 		}
