--- a/project.config.json
+++ b/project.config.json
@@ -34,9 +34,9 @@
 			"list": [
 				{
 					"id": 0,
-					"name": "book",
-					"pathName": "pages/bookSearch/bookInfo/bookInfo",
-					"query": "ISBN=7-5354-2730-8"
+					"name": "about",
+					"pathName": "pages/features/about",
+					"query": ""
 				}
 			]
 		}
