更名为贝壳盒子

--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarTitleText": "信实盒子",
+    "navigationBarTitleText": "贝壳盒子",
     "navigationBarTextStyle": "white",
     "navigationBarBackgroundColor": "#ECC0A8"
   },
