--- a/project.config.json
+++ b/project.config.json
@@ -35,7 +35,7 @@
 				{
 					"id": 0,
 					"name": "about",
-					"pathName": "pages/features/about",
+					"pathName": "pages/features/features",
 					"query": ""
 				}
 			]
