修复课表分享出去后，好友打开无法获取到全局变量的bug

--- a/project.config.json
+++ b/project.config.json
@@ -31,14 +31,7 @@
 		},
 		"miniprogram": {
 			"current": -1,
-			"list": [
-				{
-					"id": 0,
-					"name": "about",
-					"pathName": "pages/features/features",
-					"query": ""
-				}
-			]
+			"list": []
 		}
 	}
 }
