终于完成了校园出行部分。。但是真的好丑

--- a/project.config.json
+++ b/project.config.json
@@ -31,7 +31,14 @@
 		},
 		"miniprogram": {
 			"current": -1,
-			"list": []
+			"list": [
+				{
+					"id": -1,
+					"name": "2",
+					"pathName": "pages/Transport/Transport",
+					"query": ""
+				}
+			]
 		}
 	}
 }
