--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "pages/error/notfound",
     "pages/error/queryerror",
     "pages/bookSearch/index",
+    "pages/Transport/Transport",
     "pages/bookSearch/bookInfo/bookInfo",
     "pages/bookSearch/bookInfo/bookDetail",
     "pages/bookSearch/bookInfo/bookList",
