备份一下，和欢欢去吃饭咯
备份一下，回来继续加分享功能。现在是bookDetail

--- a/app.json
+++ b/app.json
@@ -13,6 +13,7 @@
     "pages/net/netfare",
     "pages/Transport/Transport",
     "pages/bookSearch/bookInfo/bookInfo",
+    "pages/bookSearch/bookInfo/isbn/iputIsbn",
     "pages/bookSearch/bookInfo/bookDetail",
     "pages/bookSearch/bookInfo/bookList",
     "pages/tel/departmentTel/departmentTel",
