完成了网费查询两个页面及其关联，修复了手输isbn不验证的bug

--- a/app.json
+++ b/app.json
@@ -11,6 +11,7 @@
     "pages/error/queryerror",
     "pages/bookSearch/index",
     "pages/net/netfare",
+    "pages/net/netBind",
     "pages/Transport/Transport",
     "pages/bookSearch/bookInfo/bookInfo",
     "pages/bookSearch/bookInfo/isbn/iputIsbn",
