--- a/project.config.json
+++ b/project.config.json
@@ -30,13 +30,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
 					"name": "netfare",
 					"pathName": "pages/net/netfare",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "dfBind",
+					"pathName": "pages/electricity/electricityBind"
 				}
 			]
 		}
