--- a/project.config.json
+++ b/project.config.json
@@ -30,7 +30,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
@@ -41,7 +41,8 @@
 				{
 					"id": -1,
 					"name": "dfBind",
-					"pathName": "pages/electricity/electricityBind"
+					"pathName": "pages/electricity/electricityBind",
+					"query": ""
 				}
 			]
 		}
