--- a/project.config.json
+++ b/project.config.json
@@ -30,7 +30,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -40,9 +40,9 @@
 				},
 				{
 					"id": 1,
-					"name": "eorrorPage",
-					"pathName": "pages/error/notfound",
-					"query": ""
+					"name": "成绩",
+					"pathName": "pages/score/showScore/showScore",
+					"query": "app.globalData.uid=160130123&app.globalData.pwd=19980721"
 				}
 			]
 		}
