基本上完成界面美化🍗
这下好好休息几天吧，今天颈椎明显很不舒服了。。。最近工作量有点大，又该玩一玩放松几天了。啊，头仰不后去，好疼啊。。

--- a/project.config.json
+++ b/project.config.json
@@ -40,9 +40,9 @@
 				},
 				{
 					"id": 1,
-					"name": "成绩",
-					"pathName": "pages/score/showScore/showScore",
-					"query": "app.globalData.uid=160130123&app.globalData.pwd=19980721"
+					"name": "welcome",
+					"pathName": "pages/welcome/welcome",
+					"query": ""
 				}
 			]
 		}
