增强了图书检索，优化了大量异常提示
1.优化了错误提示页面
2.使用了风格统一的图书搜索结果icon
3.美化了生成成绩单的按钮
4.优化了两图书信息不齐全的提示
5.优化了无图书搜索结果的异常跳转
6.增加了馆藏图书按作者、出版社查找
7.优化了修改密码后用旧密码课表查询的提示
8.修复了部分iPhone手机用户课表第六节遮挡不全的bug
9.课表课程内容可以长按复制到粘贴板
10.电费查询空调用电项加入风扇
11.废弃了无用的notfound页面，统一使用querryerror页面报错提示
12.功能九宫格埋设好图书欠费查询的按钮
13.feature页面按钮风格统一
14.优化成绩查询异常的提示
15.个人信息页面查询异常跳转变更
16.去除了部门电话页面的下拉刷新功能

--- a/project.config.json
+++ b/project.config.json
@@ -34,15 +34,15 @@
 			"list": [
 				{
 					"id": 0,
-					"name": "netfare",
-					"pathName": "pages/net/netfare",
+					"name": "error",
+					"pathName": "pages/error/queryerror",
 					"query": ""
 				},
 				{
 					"id": 1,
-					"name": "map",
-					"pathName": "pages/calendar/calendar",
-					"query": "activeIndex=1"
+					"name": "score",
+					"pathName": "pages/score/showScore/showScore",
+					"query": ""
 				}
 			]
 		}
