修复了OPAC无响应跳转异常的bug

--- a/project.config.json
+++ b/project.config.json
@@ -35,7 +35,7 @@
 				{
 					"id": 0,
 					"name": "test",
-					"pathName": "pages/index/index",
+					"pathName": "pages/features/features",
 					"query": ""
 				},
 				{
