--- a/project.config.json
+++ b/project.config.json
@@ -30,7 +30,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -41,7 +41,7 @@
 				{
 					"id": 1,
 					"name": "score",
-					"pathName": "pages/score/showScore/showScore",
+					"pathName": "pages/classQuery/index",
 					"query": ""
 				}
 			]
