放假前的最后一次更新
更新美化公交车信息，压缩图片大小占用,全部更名小盒子

--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarTitleText": "贝壳盒子",
+    "navigationBarTitleText": "贝壳小盒子",
     "navigationBarTextStyle": "white",
     "navigationBarBackgroundColor": "#7acfa6"
   },
