--- a/project.config.json
+++ b/project.config.json
@@ -30,7 +30,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -41,8 +41,12 @@
 				{
 					"id": 1,
 					"name": "score",
-					"pathName": "pages/classQuery/index",
-					"query": ""
+					"pathName": "pages/score/showScore/showScore",
+					"query": "isShareFrom=true&uid=160130123&pwd=19980721",
+					"scene": "1036",
+					"referrerInfo": {
+						"appId": "wxf0ba93e3faff4eda"
+					}
 				}
 			]
 		}
