今天有干活哦，主要重新做了功能swiper
废弃了原来的九宫格功能，改用swiper5*2小图标样式，另外重命名成绩查询路径，明天分离校历&地图界面，将地图功能升级改版为校园导航

--- a/app.json
+++ b/app.json
@@ -10,8 +10,8 @@
     "pages/features/about",
     "pages/welcome/welcome",
     "pages/classQuery/index",
+    "pages/score/score",
     "pages/calendar/calendar",
-    "pages/score/showScore/showScore",
     "pages/error/queryerror",
     "pages/net/netfare",
     "pages/net/netBind",
