主要是地图导航功能
校内步行导航实现，另外卡片、wraper层25rpx圆角化,到开学或者有空把高德的PoiMarkers可能要改成自己标记的Markers。。。这工作量不小啊

--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 				{
 					"id": 0,
 					"name": "test",
-					"pathName": "pages/features/features",
+					"pathName": "pages/schoolNav/schoolNav",
 					"query": "",
 					"scene": null
 				},
