--- a/app.json
+++ b/app.json
@@ -47,5 +47,10 @@
         "selectedIconPath": "images/holiday.png"
       }
     ]
+  },
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于校园导航定位"
+    }
   }
 }
