终于把We重邮的课表界面搬过来了
界面样式基本可以用了，下一步，等教务开了调试后端接口和前后对接。

--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "pages/features/about",
     "pages/welcome/welcome",
     "pages/classQuery/index",
+    "pages/classQuery/class",
     "pages/score/score",
     "pages/calendar/calendar",
     "pages/error/queryerror",
