--- a/project.config.json
+++ b/project.config.json
@@ -31,7 +31,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -42,13 +42,10 @@
 				},
 				{
 					"id": 1,
-					"name": "score",
-					"pathName": "pages/score/showScore/showScore",
-					"query": "isShareFrom=true&uid=160130123&pwd=19980721",
-					"scene": "1036",
-					"referrerInfo": {
-						"appId": "wxf0ba93e3faff4eda"
-					}
+					"name": "map",
+					"pathName": "pages/schoolNav/schoolNav",
+					"query": "",
+					"scene": 1001
 				}
 			]
 		}
