修改美化了校园出行及其分享函数
还修改了通讯录为常用号码，

--- a/project.config.json
+++ b/project.config.json
@@ -42,8 +42,8 @@
 				},
 				{
 					"id": 1,
-					"name": "map",
-					"pathName": "pages/schoolNav/schoolNav",
+					"name": "出行",
+					"pathName": "pages/Transport/Transport",
 					"query": "",
 					"scene": 1001
 				}
