班级课表本来基本好了，结果教务网又关了。。。
还要想办法穿透。。

--- a/project.config.json
+++ b/project.config.json
@@ -31,12 +31,12 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 0,
 			"list": [
 				{
 					"id": 0,
-					"name": "bg",
-					"pathName": "pages/bookSearch/isbn/iputIsbn",
+					"name": "kb",
+					"pathName": "pages/classQuery/class",
 					"query": "",
 					"scene": null
 				},
