校园导航和课表查询的修改
多于图标的删除等

--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "pages/index/index",
     "pages/bookSearch/isbn/iputIsbn",
     "pages/bookSearch/bookInfo/bookDetail",
+    "pages/bookSearch/bookInfo/bookInfo",
     "pages/bookSearch/bookInfo/bookList",
     "pages/features/features",
     "pages/features/about",
