--- a/project.config.json
+++ b/project.config.json
@@ -31,7 +31,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -42,8 +42,8 @@
 				},
 				{
 					"id": 1,
-					"name": "xl",
-					"pathName": "pages/calendar/calendar",
+					"name": "daohang ",
+					"pathName": "pages/schoolNav/schoolNav",
 					"query": "",
 					"scene": 1001
 				}
