课表分享上课借书路线导航完成

--- a/project.config.json
+++ b/project.config.json
@@ -35,9 +35,9 @@
 			"list": [
 				{
 					"id": 0,
-					"name": "xl",
-					"pathName": "pages/calendar/calendar",
-					"query": "",
+					"name": "ckb",
+					"pathName": "pages/classQuery/index",
+					"query": "isShareFrom=null",
 					"scene": null
 				},
 				{
