继续适配新教教务
-支持重置密码
-关于页面重写内容
-

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/bookSearch/index",
     "pages/index/index",
+    "pages/index/reset",
     "pages/bookSearch/isbn/iputIsbn",
     "pages/bookSearch/bookInfo/bookDetail",
     "pages/bookSearch/bookInfo/bookInfo",
