--- a/project.config.json
+++ b/project.config.json
@@ -31,19 +31,19 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
-					"name": "ckb",
-					"pathName": "pages/classQuery/index",
-					"query": "isShareFrom=null",
+					"name": "reset",
+					"pathName": "pages/index/reset",
+					"query": "",
 					"scene": null
 				},
 				{
 					"id": 1,
-					"name": "daohang ",
-					"pathName": "pages/schoolNav/schoolNav",
+					"name": "index",
+					"pathName": "pages/index/index",
 					"query": "",
 					"scene": 1001
 				}
