--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "pages": [
     "pages/bookSearch/index",
     "pages/index/index",
-    "pages/index/reset",
+    "pages/index/vcode",
     "pages/bookSearch/isbn/iputIsbn",
     "pages/bookSearch/bookInfo/bookDetail",
     "pages/bookSearch/bookInfo/bookInfo",
