新增教师课表查询功能
- 新增教师课表查询
- 上课导航恢复

--- a/app.json
+++ b/app.json
@@ -11,6 +11,8 @@
     "pages/features/about",
     "pages/welcome/welcome",
     "pages/classQuery/index",
+    "pages/classQuery/jskb",
+    "pages/classQuery/showJskb",
     "pages/score/score",
     "pages/calendar/calendar",
     "pages/error/queryerror",
