--- a/project.config.json
+++ b/project.config.json
@@ -45,9 +45,9 @@
 			"list": [
 				{
 					"id": 0,
-					"name": "update",
-					"pathName": "pages/bookSearch/index",
-					"query": "",
+					"name": "pages/classQuery/showJskb",
+					"pathName": "pages/classQuery/showJskb",
+					"query": "keyword=马波",
 					"scene": null
 				}
 			]
