--- a/app.json
+++ b/app.json
@@ -55,5 +55,9 @@
       "desc": "你的位置信息将用于校园导航定位"
     }
   },
+  "navigateToMiniProgramAppIdList": [
+    "wx183616af30e5723d",
+    "wx9551f8196258f706"
+  ],
   "sitemapLocation": "sitemap33.json"
 }
