新增课表生成图片功能
- 新增canvas课表存图功能
- 更新footer年份
- 去除四六级准考证号查询入口

--- a/project.config.json
+++ b/project.config.json
@@ -49,8 +49,8 @@
 			"list": [
 				{
 					"id": 0,
-					"name": "cet",
-					"pathName": "pages/cet/find",
+					"name": "kb",
+					"pathName": "pages/classQuery/index",
 					"query": "",
 					"scene": null
 				}
