新增毕业照合成功能
调用face++的免费人脸融合接口，生成毕业照

--- a/app.json
+++ b/app.json
@@ -25,7 +25,9 @@
     "pages/schoolNav/schoolNav",
     "pages/opac/index",
     "pages/opac/bind",
-    "pages/cet/find"
+    "pages/cet/find",
+    "pages/graduatePhoto/sample",
+    "pages/graduatePhoto/result"
   ],
   "window": {
     "backgroundTextStyle": "light",
