update2.4.1新学期更新校历&下线毕业照
1.更新校历
2.下线毕业照
3.修复重置密码链接

--- a/project.config.json
+++ b/project.config.json
@@ -52,8 +52,8 @@
 			"list": [
 				{
 					"id": 0,
-					"name": "pages/graduatePhoto/sample",
-					"pathName": "pages/graduatePhoto/sample",
+					"name": "pages/calendar/calendar",
+					"pathName": "pages/calendar/calendar",
 					"query": "",
 					"scene": null
 				}
