--- a/project.config.json
+++ b/project.config.json
@@ -13,6 +13,8 @@
     "checkInvalidKey": true,
     "checkSiteMap": true,
     "uploadWithSourceMap": true,
+    "useMultiFrameRuntime": false,
+    "useApiHook": true,
     "babelSetting": {
       "ignore": [],
       "disablePlugins": [],
@@ -23,9 +25,7 @@
     "userConfirmedUseCompilerModuleSwitch": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
-    "minifyWXSS": true,
-    "useMultiFrameRuntime": false,
-    "useApiHook": true
+    "minifyWXSS": true
   },
   "compileType": "miniprogram",
   "libVersion": "2.4.0",
@@ -35,17 +35,10 @@
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "condition": {
-    "search": {
-      "list": []
-    },
-    "conversation": {
-      "list": []
-    },
     "plugin": {
       "list": []
     },
     "game": {
-      "currentL": -1,
       "list": []
     },
     "gamePlugin": {
@@ -54,9 +47,8 @@
     "miniprogram": {
       "list": [
         {
-          "id": 0,
-          "name": "pages/index/index",
-          "pathName": "pages/index/index",
+          "name": "pages/article/certificate",
+          "pathName": "pages/article/certificate",
           "query": "",
           "scene": null
         }
