无用静态图片删除&通讯录优化

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -13,8 +13,8 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/course/stulist/index",
-          "pathName": "pages/course/stulist/index",
+          "name": "pages/school/tel",
+          "pathName": "pages/school/tel",
           "query": "",
           "scene": null
         }
