课程订阅消息&成绩查询插屏广告

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -11,7 +11,13 @@
       "list": []
     },
     "miniprogram": {
-      "list": []
+      "list": [
+        {
+          "name": "pages/course/my",
+          "pathName": "pages/course/my",
+          "scene": null
+        }
+      ]
     }
   }
 }
