图书查询、续借等功能回归（沿用老代码，日后再重构）

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -13,8 +13,9 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/course/my",
-          "pathName": "pages/course/my",
+          "name": "pages/books/bind",
+          "pathName": "pages/books/bind",
+          "query": "",
           "scene": null
         }
       ]
