--- a/app.json
+++ b/app.json
@@ -3,6 +3,10 @@
     "pages/index/index",
     "pages/index/login",
     "pages/index/feature",
+    "pages/books/index",
+    "pages/books/detail",
+    "pages/books/bind",
+    "pages/books/my",
     "pages/course/my",
     "pages/course/search",
     "pages/course/content",
