update V3.0.4版本： 1. 正式版&体验版、开发版自动切换API地址； 2. 图书功能可浏览OPAC系统书架； 3. 图书详情界面馆藏信息、图书信息、相关书架、同名作者书籍展示； 4. 图书检索界面列表界面优化； 5. 我的图书借阅初始密码需修改密码； 6. 关于界面自动获取线上版本号； 7. 校历界面恢复本周/下周校历安排事件;

--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "pages/index/feature",
     "pages/books/index",
     "pages/books/detail",
+    "pages/books/shelf",
     "pages/books/bind",
     "pages/books/my",
     "pages/course/my",
