--- a/project.private.config.json
+++ b/project.private.config.json
@@ -13,9 +13,9 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/books/bind",
-          "pathName": "pages/books/bind",
-          "query": "",
+          "name": "pages/books/detail",
+          "pathName": "pages/books/detail",
+          "query": "code=6f6f62567a58674a37632b59576a6d735476686c6e413d3d",
           "scene": null
         }
       ]
